--- a/frontend/src/components/Footer.module.css
+++ b/frontend/src/components/Footer.module.css
@@ -1,12 +1,12 @@
 .footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     margin: auto;
     background: white;
     width: 375px;
     height: 68px;
     display: flex;
-    z-index: 5;
+    /* z-index: 5; */
     justify-content: center;
     flex-wrap: wrap;
     box-shadow: 0 -2px 3px rgba(0, 0, 0, 0.25);
