working on admin screen

--- a/frontend/src/screens/UserListScreen.module.css
+++ b/frontend/src/screens/UserListScreen.module.css
@@ -54,3 +54,13 @@
     margin: 0 8px;
     padding-bottom: 4px;
 }
+
+.btn-details {
+    margin: 4px 0;
+    padding: 8px;
+    color: #fff;
+    background: #25da14;
+    border: 1px solid #25da14;
+    border-radius: 8px;
+    width: 100%;
+}
