Prepare for deployment

--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -7,8 +7,8 @@ header {
     justify-content: right;
     align-items: center;
     flex-wrap: wrap;
-    width: 375px;
-    height: 80px;
+    width: 100%;
+    height: 60px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
     position: sticky;
 }
