--- a/frontend/src/components/Footer.module.css
+++ b/frontend/src/components/Footer.module.css
@@ -3,7 +3,7 @@
     bottom: 0;
     margin: auto;
     background: white;
-    width: 375px;
+    width: 100%;
     height: 60px;
     display: flex;
     /* z-index: 5; */
