--- a/frontend/src/components/SearchBox.module.css
+++ b/frontend/src/components/SearchBox.module.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     justify-content: center;
+    flex-direction: row;
 }
 
 .header-search-form {
@@ -8,10 +9,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #eeecec;
+    background: #e6e4e4;
     margin: 24px 12px;
     padding: 5px 8px;
-    height: 40px;
+    height: 50px;
     border-radius: 8px;
 }
 
