--- a/frontend/src/components/SearchBox.module.css
+++ b/frontend/src/components/SearchBox.module.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
+    position: sticky;
+    top: 0;
 }
 
 .header-search-form {
@@ -14,6 +16,8 @@
     padding: 5px 8px;
     height: 50px;
     border-radius: 8px;
+    position: sticky;
+    top: 0;
 }
 
 .header-search-form button {
