--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -111,8 +111,8 @@ header {
 
 .overlay {
     display: none;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: fixed;
     z-index: 10;
     top: 0;
