Prepare for responsive design

--- a/frontend/src/screens/PlaceOrderScreen.module.css
+++ b/frontend/src/screens/PlaceOrderScreen.module.css
@@ -203,13 +203,11 @@
 
 .cart-summery {
     width: 100%;
-    margin: 4px;
-    margin-bottom: 8px;
-    padding: 4px 0;
-    padding-left: 12px;
+    padding: 0 12px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .number-product {
