--- a/frontend/src/components/Footer.module.css
+++ b/frontend/src/components/Footer.module.css
@@ -1,6 +1,7 @@
 .footer {
     position: fixed;
     bottom: 0;
+    left: 0;
     margin: auto;
     background: white;
     width: 100%;
@@ -12,18 +13,26 @@
     box-shadow: 0 -2px 3px rgba(0, 0, 0, 0.25);
 }
 
+.footer nav {
+    display: inline-block;
+    width: 100%;
+}
+
 .footer-items {
     width: 100%;
     height: 64px;
     display: flex;
     justify-content: center;
+    margin: 0;
+    padding: 0;
 }
 
 .footer-item {
     list-style: none;
-    flex: content;
-    margin: 12px;
-    padding: 4px 12px;
+    /* flex: content; */
+    margin: 12px 3.5%;
+    padding: 4px 8px;
+    display: inline-block;
 }
 
 .footer-item button {
