--- a/frontend/src/screens/CartScreen.module.css
+++ b/frontend/src/screens/CartScreen.module.css
@@ -72,7 +72,6 @@
 }
 
 .product-stock {
-    /* margin-bottom: 6px; */
     color: #ee4949;
     font-size: 65%;
     font-weight: lighter;
@@ -188,13 +187,11 @@
 
 .cart-summery {
     width: 100%;
-    margin: 4px;
-    margin-bottom: 8px;
-    padding: 4px 0;
-    padding-left: 12px;
+    padding: 0 12px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .number-product {
